@@ -1,5 +1,6 @@
 Version 0.16.0 (2022-01-08)
 - Return unique_id if name is not in cache
+- Remove no longer needed press_virtual_remote_key
 
 Version 0.15.2 (2022-01-07)
 - Add devices to CustomEntity
